# captioner

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
app/src/main/java/com/sheltron/captioner/: CaptionerApp.kt  MainActivity.kt
app/src/main/java/com/sheltron/captioner/api/: ClaudeClient.kt  GemmaClient.kt  GemmaModelManager.kt  NanoClient.kt  TaskExtractor.kt  WhisperClient.kt
app/src/main/java/com/sheltron/captioner/audio/: AudioDecoder.kt  AudioEncoder.kt  AudioPaths.kt  ModelManager.kt  PlaybackController.kt  RecorderService.kt  SoundEffects.kt  SpeechRecognizerEngine.kt  Transcriber.kt  WhisperCpp.kt  WhisperModelManager.kt
app/src/main/java/com/sheltron/captioner/data/: Repository.kt
app/src/main/java/com/sheltron/captioner/data/db/: AppDatabase.kt  Line.kt  LineDao.kt  Session.kt  SessionDao.kt  Task.kt  TaskDao.kt
app/src/main/java/com/sheltron/captioner/settings/: SettingsStore.kt
app/src/main/java/com/sheltron/captioner/ui/nav/: Nav.kt
app/src/main/java/com/sheltron/captioner/ui/screens/: HomeScreen.kt  LiveScreen.kt  SessionDetailScreen.kt  SettingsScreen.kt  TasksScreen.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
docs/superpowers/specs/: 2026-04-19-audio-recording-design.md
(+4 files in other folders)
